<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/pink"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="290dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="290dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="280dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:elevation="4dp"
        android:onClick="login"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/guestLoginButton"
        android:layout_width="276dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:elevation="4dp"
        android:onClick="loginAsGuest"
        android:padding="16dp"
        android:text="¯\\_(ツ)_/¯"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="280dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:elevation="4dp"
        android:onClick="loginWithGoogle"
        android:padding="16dp"
        android:text="@string/login_with_google"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLoginButton" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/time_to_reg"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="280dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:elevation="4dp"
        android:onClick="register"
        android:padding="16dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationText" />


</androidx.constraintlayout.widget.ConstraintLayout>