<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/pink"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_below="@id/registrationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:paddingStart="16dp" />

    <RadioGroup
        android:id="@+id/accountTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"

        >

        <RadioButton
            android:id="@+id/parent"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/parent"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/camper"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/camper"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RadioGroup>

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:paddingStart="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="@color/black"
        android:layout_below="@id/accountTypeGroup"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userEmailEditText"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_background"
        android:paddingStart="16dp"/>

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/passwordEditText"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_background"
        android:paddingStart="16dp"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/phoneEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:buttonTint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_background"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/birthDateEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/phoneSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/address"
        android:inputType="textMultiLine|textPostalAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/birthDateEditText"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_background"
        android:paddingStart="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="69dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:backgroundTint="@color/pink"
            android:onClick="register"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:backgroundTint="@color/pink"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>