<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="10dp"
    card_view:cardBackgroundColor="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pastel_gradient"
        android:padding="16dp">

        <!-- Bal oldali kép -->
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
             />

        <!-- Cím -->
        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/itemImage"
            android:layout_alignTop="@id/itemImage"
            android:layout_marginStart="12dp"
            android:text="@string/item_placeholder"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Értékelés -->
        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.Material.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_toEndOf="@id/itemImage"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:isIndicator="true"
            android:numStars="5" />

        <!-- Leírás középen -->
        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/item_info_placeholder"
            android:textColor="@android:color/darker_gray" />

        <!-- Ár -->
        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginTop="12dp"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/purple_700" />

        <!-- Szabad helyek -->
        <TextView
            android:id="@+id/freeSpots"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_marginTop="4dp"
            android:text="Szabad helyek: 0"
            android:textColor="@color/red" />

        <!-- Helyszín -->
        <TextView
            android:id="@+id/place"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/freeSpots"
            android:layout_marginTop="4dp"
            android:text="Helyszín: Szeged"
            android:textColor="@color/black" />

        <!-- Korcsoport és dátum -->
        <LinearLayout
            android:id="@+id/age_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/place"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age"
                style="@style/ItemDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Korcsoport: 10-14"
                android:textColor="@color/purple" />

            <TextView
                android:id="@+id/date"
                style="@style/ItemDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="2024.07.01 - 2024.07.07"
                android:textColor="@color/purple" />
        </LinearLayout>

        <!-- Gombok alul -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age_date_container"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/pink"
                android:text="Lefoglalom"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>